--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
 		"strict": true,
+		"module": "ES2022",
 		"moduleResolution": "bundler",
 		"noEmit": true,
 		"allowImportingTsExtensions": true
